# yast-ntp-client

./: .gitignore  .rubocop.yml  .rubocop.yml.disabled  .travis.sh  .travis.yml  Dockerfile  MAINTAINER  README.md  Rakefile  VERSION  yast2-ntp-client.spec.in
.github/workflows/: ci.yml
agents/: Makefile.am  ag_ntp_conf  cfg_ntp.scr  cfg_xntp.scr  etc_ntp.scr
data/: .cvsignore  Makefile.am  get_servers.pl  ntp_servers.xml  ntp_servers.ycp  test_servers.pl
doc/: spec.txt
doc/autodocs/: .gitignore  Makefile.am
ntp-client/: RPMNAME
ntp-client/agents/: Makefile.am  cfg_xntp.scr  etc_ntp.scr
ntp-client/data/: Makefile.am  ntp_servers.ycp  test_servers.pl
ntp-client/doc/: Makefile.am  TODO  ntp.conf_agent.txt
ntp-client/package/: yast2-ntp-client.changes
ntp-client/src/: Makefile.am  NtpClient.ycp  commandline.ycp  helps.ycp  misc.ycp  ntp-client.desktop  widgets.ycp  wizards.ycp
package/: yast2-ntp-client.changes  yast2-ntp-client.spec
src/: Makefile.am  NtpClient.ycp  clocktypes.ycp  commandline.ycp  dialogs.ycp  helps.ycp  misc.ycp  ntp-client.desktop  ntp-client.y2cc  ntp-client.ycp  ntp-client_auto.ycp  ntp-client_finish.ycp  ntp-client_proposal.ycp  ntp_servers.ycp  ntpclient.rnc  widgets.ycp  wizards.ycp
src/autoyast-rnc/: ntpclient.rnc
src/clients/: ntp-client.rb  ntp-client_auto.rb  ntp-client_finish.rb  ntp-client_proposal.rb
src/data/: ntp_servers.yml  yast-timesync.timer.erb
src/desktop/: ntp-client.desktop  org.opensuse.yast.NTPClient.desktop
src/include/ntp-client/: clocktypes.rb  clocktypes.ycp  commandline.rb  commandline.ycp  dialogs.rb  dialogs.ycp  helps.rb  helps.ycp  misc.rb  misc.ycp  widgets.rb  wizards.rb
src/lib/cfa/: chrony_conf.rb  ntp_conf.rb
src/lib/y2ntp_client/: dynamic_servers.rb  widgets.rb
src/lib/y2ntp_client/client/: auto.rb  finish.rb
src/lib/y2ntp_client/dialog/: add_pool.rb  main.rb  pool.rb
src/lib/y2ntp_client/widgets/: main_widgets.rb  pool_widgets.rb  sources_table.rb
src/modules/: NtpClient.rb  NtpClient.ycp
src/systemd/: yast-timesync.service
test/: misc_test.rb  ntp_client_proposal_test.rb  ntp_client_test.rb  test_helper.rb
test/cfa/: chrony_conf_test.rb  ntp_conf_test.rb
test/data/: ntp_servers_sample.yml
test/y2ntp_client/: dynamic_servers_test.rb
testsuite/: .cvsignore  Makefile.am
testsuite/lib/: yast2_ag.exp
testsuite/run/: README  runtest-ag.sh
(+39 files in other folders)
